cluster/pihole/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: pihole
spec:
  redirectScheme:
    scheme: https
    permanent: true
