cluster/pihole/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
    traefik.ingress.kubernetes.io/service.serversscheme: http
  labels:
    app: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.15.241
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
