cluster/pihole/manifests/pihole-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-https
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.jonbatista.dev`)
      kind: Rule
      middlewares:
        - name: pihole-headers
      services:
        - name: pihole
          port: 80
  tls:
    certResolver: le
    domains:
      - main: pihole.jonbatista.dev
